objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Sales_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Target</label>
        <referenceTo>Sales_Target__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Performance__c</fullName>
        <formula>ExpectedRevenue /  Annual_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Performance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Annual_Target__c</fullName>
        <formula>Sales_Target__r.Annual_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Fiscal_Year_Performance__c</fullName>
        <formula>ExpectedRevenue /  Sales_Target__r.Annual_Target__c</formula>
        <label>Current Fiscal Year Performance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Month_Performance__c</fullName>
        <formula>ExpectedRevenue / Sales_Target__r.Current_Montly_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Month Performance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Monthly_Target__c</fullName>
        <formula>Sales_Target__r.Current_Montly_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Monthly Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Quarter_Performance__c</fullName>
        <formula>ExpectedRevenue / Sales_Target__r.Current_Quarterly_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Quarter Performance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Quarterly_Target__c</fullName>
        <formula>Sales_Target__r.Current_Quarterly_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Quarterly Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Targets__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Targets</label>
        <referenceTo>Sales_Targets__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>